Fixed all of the random spacing issues after updating to the same reset script that tickets is using.
Still can not figure out why the iframs are being all lame!

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,18 @@ h3 {
 	        transition-timing-function: cubic-bezier(0.895, 0.030, 0.685, 0.220); /* easeInQuart */
 }
 
+.insideBoxShadow{
+	-moz-box-shadow: inset 0 0 1px 1px rgb(136, 136, 136);
+	-webkit-box-shadow: inset 0 0 1px 1px rgb(136, 136, 136);
+	box-shadow: inset 0 0 1px 1px rgb(136, 136, 136);
+}
+.outSideBoxShadow{
+	-moz-box-shadow: 0 0 1px 1px rgb(136, 136, 136);
+	-webkit-box-shadow: 0 0 1px 1px rgb(136, 136, 136);
+	box-shadow: 0 0 1px 1px rgb(136, 136, 136);
+}
+
+
 /*  End of theme related CSS */
 
 
@@ -268,7 +280,6 @@ h3 {
 }
 .subPageHeader{
 	background: #BDE1BD;
-	box-shadow:none;
 	font-size:50px;
 	height:120px;
 	padding:3px 3px 3px 10px;
@@ -300,16 +311,7 @@ h3 {
 	color:#000;
 	text-decoration:none;
 }
-.insideBoxShadow{
-	-moz-box-shadow: inset 0 0 1px 1px #888;
-	-webkit-box-shadow: inset 0 0 1px 1px#888;
-	box-shadow: inset 0 0 1px 1px #888;
-}
-.outSideBoxShadow{
-	-moz-box-shadow: 0 0 1px 1px #888;
-	-webkit-box-shadow: 0 0 1px 1px#888;
-	box-shadow: 0 0 1px 1px #888;
-}
+
 /* Full Screen */
 
 .fLeft{
@@ -551,7 +553,7 @@ aside div,section div,.smallSection,.middleSection,.mediumSection{
 .blogEntryDescription .noAfterImage:after {content:""}
 
 .blogContainerBox,.deliciousContainer,.containerBox{
-	padding:25px 5px 5px 5px;
+	padding:30px 5px 5px 5px;
 }
 .blogItem{
 	width:620px;
